--- a/resources/views/content.twig
+++ b/resources/views/content.twig
@@ -7,7 +7,7 @@
                  data-parent="#faqs--{{ block.id }}" data-target="#faq__question--{{ faq.id }}">
 
                 <h4 class="panel-title">
-                    <a href="#" class="ing">{{ faq.question }}</a>
+                    <a href="#" onclick="return false;">{{ faq.question }}</a>
                 </h4>
 
             </div>
